--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -15,7 +15,7 @@
  */
 /*      light colors - used for select dropdown         */
 .ct-blue {
-  stroke: #7A9E9F !important; }
+  stroke: #00000 !important; }
 
 .ct-azure {
   stroke: #68B3C8 !important; }
