--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -270,7 +270,7 @@ hr {
   left: 0;
   z-index: 1;
   background-size: cover;
-  background-position: center center; }s
+  background-position: center center; }
   .sidebar .sidebar-wrapper {
     position: relative;
     max-height: none;
