--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -111,13 +111,13 @@ strong {
   color: #403D39; }
 
 .icon-primary {
-  color: #7A9E9F; }
+  color: #42AC35; }
 
 .icon-info {
-  color: #68B3C8; }
+  color: #42AC35; }
 
 .icon-success {
-  color: #7AC29A; }
+  color: #42AC35; }
 
 .icon-warning {
   color: #F3BB45; }
