--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -14,6 +14,14 @@
 
  */
 /*      light colors - used for select dropdown         */
+
+@import url('https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
+
+body{
+  font-family: 'Rubik', sans-serif;
+}
+
 .ct-blue {
   stroke: #7A9E9F !important; }
 
@@ -32,7 +40,9 @@
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, a, .td-name, td {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Muli', "Helvetica", Arial, sans-serif; }
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+}
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   font-weight: 400;
@@ -111,13 +121,13 @@ strong {
   color: #403D39; }
 
 .icon-primary {
-  color: #42AC35; }
+  color: #7A9E9F; }
 
 .icon-info {
-  color: #42AC35; }
+  color: #68B3C8; }
 
 .icon-success {
-  color: #42AC35; }
+  color: #7AC29A; }
 
 .icon-warning {
   color: #F3BB45; }
@@ -1318,7 +1328,8 @@ textarea.form-control {
 
 .navbar-default {
   background-color: #fff;
-  border-bottom: 1px solid #24272d; }
+  border-bottom: 1px solid #24272d; 
+}
   .navbar-default .brand {
     color: #66615b !important; }
   .navbar-default .navbar-nav > li > a:not(.btn) {
