--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -42,11 +42,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, a, .td
   -webkit-font-smoothing: antialiased;
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
+
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   font-weight: 400;
-  margin: 30px 0 15px; }
+  margin: 30px 0 15px; 
+
+}
 
 h1, .h1 {
   font-size: 3.2em; }
@@ -1706,7 +1709,10 @@ Copyright (c) 2015 Daniel Eden
   .card .title {
     margin: 0;
     color: #252422;
-    font-weight: 300; }
+    font-weight: 300; 
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+  }
   .card .avatar {
     width: 50px;
     height: 50px;
