--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -29,7 +29,7 @@ body{
   stroke: #68B3C8 !important; }
 
 .ct-green {
-  stroke: #7AC29A !important; }
+  stroke: #42AC35 !important; }
 
 .ct-orange {
   stroke: #F3BB45 !important; }
@@ -130,7 +130,7 @@ strong {
   color: #68B3C8; }
 
 .icon-success {
-  color: #7AC29A; }
+  color: #42AC35; }
 
 .icon-warning {
   color: #F3BB45; }
@@ -143,7 +143,7 @@ strong {
 .chart-legend .text-info, .chart-legend .text-info:hover {
   color: #68B3C8; }
 .chart-legend .text-success, .chart-legend .text-success:hover {
-  color: #7AC29A; }
+  color: #42AC35; }
 .chart-legend .text-warning, .chart-legend .text-warning:hover {
   color: #F3BB45; }
 .chart-legend .text-danger, .chart-legend .text-danger:hover {
@@ -458,7 +458,7 @@ hr {
     opacity: 1; }
   .sidebar[data-active-color="success"] .nav li.active > a,
   .off-canvas-sidebar[data-active-color="success"] .nav li.active > a {
-    color: #7AC29A;
+    color: #42AC35;
     opacity: 1; }
   .sidebar[data-active-color="warning"] .nav li.active > a,
   .off-canvas-sidebar[data-active-color="warning"] .nav li.active > a {
@@ -620,20 +620,20 @@ hr {
     border-top-color: #7A9E9F; }
 
 .navbar .navbar-nav > li > a.btn-success, .btn-success {
-  border-color: #7AC29A;
-  color: #7AC29A; }
+  border-color: #42AC35;
+  color: #42AC35; }
   .navbar .navbar-nav > li > a.btn-success:hover, .navbar .navbar-nav > li > a.btn-success:focus, .navbar .navbar-nav > li > a.btn-success:active, .navbar .navbar-nav > li > a.btn-success.active, .open > .navbar .navbar-nav > li > a.btn-success.dropdown-toggle, .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open > .btn-success.dropdown-toggle {
-    background-color: #7AC29A;
+    background-color: #42AC35;
     color: rgba(255, 255, 255, 0.7);
-    border-color: #7AC29A; }
+    border-color: #42AC35; }
     .navbar .navbar-nav > li > a.btn-success:hover .caret, .navbar .navbar-nav > li > a.btn-success:focus .caret, .navbar .navbar-nav > li > a.btn-success:active .caret, .navbar .navbar-nav > li > a.btn-success.active .caret, .open > .navbar .navbar-nav > li > a.btn-success.dropdown-toggle .caret, .btn-success:hover .caret, .btn-success:focus .caret, .btn-success:active .caret, .btn-success.active .caret, .open > .btn-success.dropdown-toggle .caret {
       border-top-color: rgba(255, 255, 255, 0.7); }
   .navbar .navbar-nav > li > a.btn-success.disabled, .navbar .navbar-nav > li > a.btn-success.disabled:hover, .navbar .navbar-nav > li > a.btn-success.disabled:focus, .navbar .navbar-nav > li > a.btn-success.disabled.focus, .navbar .navbar-nav > li > a.btn-success.disabled:active, .navbar .navbar-nav > li > a.btn-success.disabled.active, .navbar .navbar-nav > li > a.btn-success:disabled, .navbar .navbar-nav > li > a.btn-success:disabled:hover, .navbar .navbar-nav > li > a.btn-success:disabled:focus, .navbar .navbar-nav > li > a.btn-success:disabled.focus, .navbar .navbar-nav > li > a.btn-success:disabled:active, .navbar .navbar-nav > li > a.btn-success:disabled.active, .navbar .navbar-nav > li > a.btn-success[disabled], .navbar .navbar-nav > li > a.btn-success[disabled]:hover, .navbar .navbar-nav > li > a.btn-success[disabled]:focus, .navbar .navbar-nav > li > a.btn-success[disabled].focus, .navbar .navbar-nav > li > a.btn-success[disabled]:active, .navbar .navbar-nav > li > a.btn-success[disabled].active, fieldset[disabled] .navbar .navbar-nav > li > a.btn-success, fieldset[disabled] .navbar .navbar-nav > li > a.btn-success:hover, fieldset[disabled] .navbar .navbar-nav > li > a.btn-success:focus, fieldset[disabled] .navbar .navbar-nav > li > a.btn-success.focus, fieldset[disabled] .navbar .navbar-nav > li > a.btn-success:active, fieldset[disabled] .navbar .navbar-nav > li > a.btn-success.active, .btn-success.disabled, .btn-success.disabled:hover, .btn-success.disabled:focus, .btn-success.disabled.focus, .btn-success.disabled:active, .btn-success.disabled.active, .btn-success:disabled, .btn-success:disabled:hover, .btn-success:disabled:focus, .btn-success:disabled.focus, .btn-success:disabled:active, .btn-success:disabled.active, .btn-success[disabled], .btn-success[disabled]:hover, .btn-success[disabled]:focus, .btn-success[disabled].focus, .btn-success[disabled]:active, .btn-success[disabled].active, fieldset[disabled] .btn-success, fieldset[disabled] .btn-success:hover, fieldset[disabled] .btn-success:focus, fieldset[disabled] .btn-success.focus, fieldset[disabled] .btn-success:active, fieldset[disabled] .btn-success.active {
     background-color: transparent;
-    border-color: #7AC29A; }
+    border-color: #42AC35; }
   .navbar .navbar-nav > li > a.btn-success.btn-fill, .btn-success.btn-fill {
     color: #FFFFFF;
-    background-color: #7AC29A;
+    background-color: #42AC35;
     opacity: 1;
     filter: alpha(opacity=100); }
     .navbar .navbar-nav > li > a.btn-success.btn-fill:hover, .navbar .navbar-nav > li > a.btn-success.btn-fill:focus, .navbar .navbar-nav > li > a.btn-success.btn-fill:active, .navbar .navbar-nav > li > a.btn-success.btn-fill.active, .open > .navbar .navbar-nav > li > a.btn-success.btn-fill.dropdown-toggle, .btn-success.btn-fill:hover, .btn-success.btn-fill:focus, .btn-success.btn-fill:active, .btn-success.btn-fill.active, .open > .btn-success.btn-fill.dropdown-toggle {
@@ -648,7 +648,7 @@ hr {
   .navbar .navbar-nav > li > a.btn-success.btn-simple .caret, .btn-success.btn-simple .caret {
     border-top-color: #FFFFFF; }
   .navbar .navbar-nav > li > a.btn-success .caret, .btn-success .caret {
-    border-top-color: #7AC29A; }
+    border-top-color: #42AC35; }
 
 .navbar .navbar-nav > li > a.btn-info, .btn-info {
   border-color: #68B3C8;
@@ -875,9 +875,9 @@ hr {
     box-shadow: none; }
   .has-success .form-control {
     background-color: #ABF3CB;
-    color: #7AC29A; }
+    color: #42AC35; }
     .has-success .form-control.border-input {
-      border: 1px solid #7AC29A; }
+      border: 1px solid #42AC35; }
   .has-success .form-control:focus {
     background-color: #FFFFFF; }
   .has-error .form-control {
@@ -908,7 +908,7 @@ hr {
   color: #DD0330; }
 
 .has-success .form-control-feedback, .has-success .control-label {
-  color: #7AC29A; }
+  color: #42AC35; }
 
 .input-group-addon {
   background-color: #fffcf5;
@@ -919,7 +919,7 @@ hr {
   .has-error .form-control:focus + .input-group-addon {
     color: #DD0330; }
   .has-success .form-control:focus + .input-group-addon {
-    color: #7AC29A; }
+    color: #42AC35; }
   .form-control:focus + .input-group-addon, .form-control:focus ~ .input-group-addon {
     background-color: #FFFFFF; }
 
@@ -1653,7 +1653,7 @@ Copyright (c) 2015 Daniel Eden
   .dropdown-menu.dropdown-info > li > a:hover, .dropdown-menu.dropdown-info > li > a:focus {
     background-color: #68B3C8; }
   .dropdown-menu.dropdown-success > li > a:hover, .dropdown-menu.dropdown-success > li > a:focus {
-    background-color: #7AC29A; }
+    background-color: #42AC35; }
   .dropdown-menu.dropdown-warning > li > a:hover, .dropdown-menu.dropdown-warning > li > a:focus {
     background-color: #F3BB45; }
   .dropdown-menu.dropdown-danger > li > a:hover, .dropdown-menu.dropdown-danger > li > a:focus {
@@ -2010,9 +2010,9 @@ Copyright (c) 2015 Daniel Eden
   fill: #DD0330; }
 
 .ct-series-d .ct-point, .ct-series-d .ct-line, .ct-series-d .ct-bar, .ct-series-d .ct-slice-donut {
-  stroke: #7AC29A; }
+  stroke: #42AC35; }
 .ct-series-d .ct-slice-pie, .ct-series-d .ct-area {
-  fill: #7AC29A; }
+  fill: #42AC35; }
 
 .ct-series-e .ct-point, .ct-series-e .ct-line, .ct-series-e .ct-bar, .ct-series-e .ct-slice-donut {
   stroke: #7A9E9F; }
@@ -3050,7 +3050,7 @@ Copyright (c) 2015 Daniel Eden
   background-color: #68B3C8; }
 
 .fixed-plugin .badge-success {
-  background-color: #7AC29A; }
+  background-color: #42AC35; }
 
 .fixed-plugin .badge-warning {
   background-color: #F3BB45; }
