--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -22,20 +22,7 @@ body{
   font-family: 'Rubik', sans-serif;
 }
 
-.ct-blue {
-  stroke: #7A9E9F !important; }
 
-.ct-azure {
-  stroke: #68B3C8 !important; }
-
-.ct-green {
-  stroke: #42AC35 !important; }
-
-.ct-orange {
-  stroke: #F3BB45 !important; }
-
-.ct-red {
-  stroke: #DD0330 !important; }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, a, .td-name, td {
   -moz-osx-font-smoothing: grayscale;
@@ -133,7 +120,7 @@ strong {
   color: #42AC35; }
 
 .icon-warning {
-  color: #F3BB45; }
+  color: #36aba7; }
 
 .icon-danger {
   color: #DD0330; }
@@ -145,7 +132,7 @@ strong {
 .chart-legend .text-success, .chart-legend .text-success:hover {
   color: #42AC35; }
 .chart-legend .text-warning, .chart-legend .text-warning:hover {
-  color: #F3BB45; }
+  color: #36aba7; }
 .chart-legend .text-danger, .chart-legend .text-danger:hover {
   color: #DD0330; }
 
@@ -462,7 +449,7 @@ hr {
     opacity: 1; }
   .sidebar[data-active-color="warning"] .nav li.active > a,
   .off-canvas-sidebar[data-active-color="warning"] .nav li.active > a {
-    color: #F3BB45;
+    color: #36aba7;
     opacity: 1; }
   .sidebar[data-active-color="danger"] .nav li.active > a,
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a {
@@ -684,20 +671,20 @@ hr {
     border-top-color: #68B3C8; }
 
 .navbar .navbar-nav > li > a.btn-warning, .btn-warning {
-  border-color: #F3BB45;
-  color: #F3BB45; }
+  border-color: #36aba7;
+  color: #36aba7; }
   .navbar .navbar-nav > li > a.btn-warning:hover, .navbar .navbar-nav > li > a.btn-warning:focus, .navbar .navbar-nav > li > a.btn-warning:active, .navbar .navbar-nav > li > a.btn-warning.active, .open > .navbar .navbar-nav > li > a.btn-warning.dropdown-toggle, .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open > .btn-warning.dropdown-toggle {
-    background-color: #F3BB45;
+    background-color: #36aba7;
     color: rgba(255, 255, 255, 0.7);
-    border-color: #F3BB45; }
+    border-color: #36aba7; }
     .navbar .navbar-nav > li > a.btn-warning:hover .caret, .navbar .navbar-nav > li > a.btn-warning:focus .caret, .navbar .navbar-nav > li > a.btn-warning:active .caret, .navbar .navbar-nav > li > a.btn-warning.active .caret, .open > .navbar .navbar-nav > li > a.btn-warning.dropdown-toggle .caret, .btn-warning:hover .caret, .btn-warning:focus .caret, .btn-warning:active .caret, .btn-warning.active .caret, .open > .btn-warning.dropdown-toggle .caret {
       border-top-color: rgba(255, 255, 255, 0.7); }
   .navbar .navbar-nav > li > a.btn-warning.disabled, .navbar .navbar-nav > li > a.btn-warning.disabled:hover, .navbar .navbar-nav > li > a.btn-warning.disabled:focus, .navbar .navbar-nav > li > a.btn-warning.disabled.focus, .navbar .navbar-nav > li > a.btn-warning.disabled:active, .navbar .navbar-nav > li > a.btn-warning.disabled.active, .navbar .navbar-nav > li > a.btn-warning:disabled, .navbar .navbar-nav > li > a.btn-warning:disabled:hover, .navbar .navbar-nav > li > a.btn-warning:disabled:focus, .navbar .navbar-nav > li > a.btn-warning:disabled.focus, .navbar .navbar-nav > li > a.btn-warning:disabled:active, .navbar .navbar-nav > li > a.btn-warning:disabled.active, .navbar .navbar-nav > li > a.btn-warning[disabled], .navbar .navbar-nav > li > a.btn-warning[disabled]:hover, .navbar .navbar-nav > li > a.btn-warning[disabled]:focus, .navbar .navbar-nav > li > a.btn-warning[disabled].focus, .navbar .navbar-nav > li > a.btn-warning[disabled]:active, .navbar .navbar-nav > li > a.btn-warning[disabled].active, fieldset[disabled] .navbar .navbar-nav > li > a.btn-warning, fieldset[disabled] .navbar .navbar-nav > li > a.btn-warning:hover, fieldset[disabled] .navbar .navbar-nav > li > a.btn-warning:focus, fieldset[disabled] .navbar .navbar-nav > li > a.btn-warning.focus, fieldset[disabled] .navbar .navbar-nav > li > a.btn-warning:active, fieldset[disabled] .navbar .navbar-nav > li > a.btn-warning.active, .btn-warning.disabled, .btn-warning.disabled:hover, .btn-warning.disabled:focus, .btn-warning.disabled.focus, .btn-warning.disabled:active, .btn-warning.disabled.active, .btn-warning:disabled, .btn-warning:disabled:hover, .btn-warning:disabled:focus, .btn-warning:disabled.focus, .btn-warning:disabled:active, .btn-warning:disabled.active, .btn-warning[disabled], .btn-warning[disabled]:hover, .btn-warning[disabled]:focus, .btn-warning[disabled].focus, .btn-warning[disabled]:active, .btn-warning[disabled].active, fieldset[disabled] .btn-warning, fieldset[disabled] .btn-warning:hover, fieldset[disabled] .btn-warning:focus, fieldset[disabled] .btn-warning.focus, fieldset[disabled] .btn-warning:active, fieldset[disabled] .btn-warning.active {
     background-color: transparent;
-    border-color: #F3BB45; }
+    border-color: #36aba7; }
   .navbar .navbar-nav > li > a.btn-warning.btn-fill, .btn-warning.btn-fill {
     color: #FFFFFF;
-    background-color: #F3BB45;
+    background-color: #36aba7;
     opacity: 1;
     filter: alpha(opacity=100); }
     .navbar .navbar-nav > li > a.btn-warning.btn-fill:hover, .navbar .navbar-nav > li > a.btn-warning.btn-fill:focus, .navbar .navbar-nav > li > a.btn-warning.btn-fill:active, .navbar .navbar-nav > li > a.btn-warning.btn-fill.active, .open > .navbar .navbar-nav > li > a.btn-warning.btn-fill.dropdown-toggle, .btn-warning.btn-fill:hover, .btn-warning.btn-fill:focus, .btn-warning.btn-fill:active, .btn-warning.btn-fill.active, .open > .btn-warning.btn-fill.dropdown-toggle {
@@ -712,7 +699,7 @@ hr {
   .navbar .navbar-nav > li > a.btn-warning.btn-simple .caret, .btn-warning.btn-simple .caret {
     border-top-color: #FFFFFF; }
   .navbar .navbar-nav > li > a.btn-warning .caret, .btn-warning .caret {
-    border-top-color: #F3BB45; }
+    border-top-color: #36aba7; }
 
 .navbar .navbar-nav > li > a.btn-danger, .btn-danger {
   border-color: #DD0330;
@@ -1655,7 +1642,7 @@ Copyright (c) 2015 Daniel Eden
   .dropdown-menu.dropdown-success > li > a:hover, .dropdown-menu.dropdown-success > li > a:focus {
     background-color: #42AC35; }
   .dropdown-menu.dropdown-warning > li > a:hover, .dropdown-menu.dropdown-warning > li > a:focus {
-    background-color: #F3BB45; }
+    background-color: #36aba7; }
   .dropdown-menu.dropdown-danger > li > a:hover, .dropdown-menu.dropdown-danger > li > a:focus {
     background-color: #DD0330; }
 
@@ -2000,9 +1987,9 @@ Copyright (c) 2015 Daniel Eden
   fill: #68B3C8; }
 
 .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
-  stroke: #F3BB45; }
+  stroke: #36aba7; }
 .ct-series-b .ct-slice-pie, .ct-series-b .ct-area {
-  fill: #F3BB45; }
+  fill: #36aba7; }
 
 .ct-series-c .ct-point, .ct-series-c .ct-line, .ct-series-c .ct-bar, .ct-series-c .ct-slice-donut {
   stroke: #DD0330; }
@@ -3053,7 +3040,7 @@ Copyright (c) 2015 Daniel Eden
   background-color: #42AC35; }
 
 .fixed-plugin .badge-warning {
-  background-color: #F3BB45; }
+  background-color: #36aba7; }
 
 .fixed-plugin .badge-danger {
   background-color: #DD0330; }
