--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -1299,7 +1299,9 @@ textarea.form-control {
     .navbar .navbar-nav > li > a i,
     .navbar .navbar-nav > li > a p {
       display: inline-block;
-      margin: 0; }
+      margin: 0; 
+      font-family: 'Rubik', sans-serif;
+    }
     .navbar .navbar-nav > li > a i {
       position: relative;
       top: 1px; }
