--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -2394,6 +2394,11 @@ textarea.form-control {
     margin: 0;
 }
 
+.navbar .navbar-nav>li>a p {
+  font-weight: 300;
+  font-family: 'Rubik', sans-serif;
+}
+
 .navbar .navbar-nav>li>a i {
     position: relative;
     top: 1px;
