--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -2554,6 +2554,7 @@ textarea.form-control {
     background-attachment: fixed;
     position: relative;
     line-height: 20px;
+    background-color: #fff;
 }
 
 .footer nav ul {
