--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -2076,6 +2076,8 @@ textarea.form-control {
     border-bottom-width: 0;
     font-size: 1.25em;
     font-weight: 300;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
 }
 
 .table .radio,
@@ -2094,6 +2096,7 @@ textarea.form-control {
 .table>tfoot>tr>td {
     padding: 12px;
     vertical-align: middle;
+    color: #fff;
 }
 
 .table .th-description {
@@ -3223,6 +3226,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .card-plain {
+    padding: 1em;
     background-color: transparent;
     box-shadow: none;
     border-radius: 0;
