--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -2069,7 +2069,9 @@ textarea.form-control {
 .table tbody tr>td,
 .table tfoot tr>th,
 .table tfoot tr>td {
-    border-top: 1px solid #CCC5B9;
+    border-top: 1px solid rgba(255,255,255,0.1);
+    font-family: 'Rubik', sans-serif;
+    font-weight: 100;
 }
 
 .table>thead>tr>th {
