--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -2994,7 +2994,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .card .card-header .card-category{
-    color: #fff;
+    color: #41a535;
     font-size: 14px;
     font-family: 'Rubik', sans-serif;
     font-weight: 100;
