--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -19,9 +19,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
-body {
-    font-family: 'Rubik', sans-serif;
-}
+
 
 .ct-blue {
   stroke: #41a535 !important; }
@@ -331,9 +329,10 @@ strong {
 }
 
 body {
-    color: #66615b;
+    color: #fff;
     font-size: 14px;
     font-family: 'Muli', Arial, sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
 
 body .wrapper {
@@ -609,21 +608,21 @@ hr {
 .sidebar[data-background-color="white"] .logo p,
 .off-canvas-sidebar .logo p,
 .off-canvas-sidebar[data-background-color="white"] .logo p {
-    color: #66615B;
+    color: #fff;
 }
 
 .sidebar .logo .simple-text,
 .sidebar[data-background-color="white"] .logo .simple-text,
 .off-canvas-sidebar .logo .simple-text,
 .off-canvas-sidebar[data-background-color="white"] .logo .simple-text {
-    color: #66615B;
+    color: #fff;
 }
 
 .sidebar .nav li:not(.active)>a,
 .sidebar[data-background-color="white"] .nav li:not(.active)>a,
 .off-canvas-sidebar .nav li:not(.active)>a,
 .off-canvas-sidebar[data-background-color="white"] .nav li:not(.active)>a {
-    color: #66615B;
+    color: #fff;
 }
 
 .sidebar .nav .divider,
@@ -741,8 +740,8 @@ hr {
     font-size: 14px;
     font-weight: 500;
     padding: 7px 18px;
-    border-color: #66615B;
-    color: #66615B;
+    border-color: #fff;
+    color: #fff;
     -webkit-transition: all 150ms linear;
     -moz-transition: all 150ms linear;
     -o-transition: all 150ms linear;
@@ -760,9 +759,9 @@ hr {
 .navbar .navbar-nav>li>a.btn:active,
 .navbar .navbar-nav>li>a.btn.active,
 .open>.navbar .navbar-nav>li>a.btn.dropdown-toggle {
-    background-color: #66615B;
+    background-color: #fff;
     color: rgba(255, 255, 255, 0.7);
-    border-color: #66615B;
+    border-color: #fff;
 }
 
 .btn:hover .caret,
@@ -827,13 +826,13 @@ fieldset[disabled] .navbar .navbar-nav>li>a.btn.focus,
 fieldset[disabled] .navbar .navbar-nav>li>a.btn:active,
 fieldset[disabled] .navbar .navbar-nav>li>a.btn.active {
     background-color: transparent;
-    border-color: #66615B;
+    border-color: #fff;
 }
 
 .btn.btn-fill,
 .navbar .navbar-nav>li>a.btn.btn-fill {
     color: #FFFFFF;
-    background-color: #66615B;
+    background-color: #fff;
     opacity: 1;
     filter: alpha(opacity=100);
 }
@@ -879,7 +878,7 @@ fieldset[disabled] .navbar .navbar-nav>li>a.btn.active {
 
 .btn .caret,
 .navbar .navbar-nav>li>a.btn .caret {
-    border-top-color: #66615B;
+    border-top-color: #fff;
 }
 
 .btn:hover,
@@ -1694,18 +1693,18 @@ fieldset[disabled] .btn-neutral.active {
 
 .btn-neutral:hover,
 .btn-neutral:focus {
-    color: #66615B;
+    color: #fff;
 }
 
 .btn-neutral:active,
 .btn-neutral.active,
 .open>.btn-neutral.dropdown-toggle {
     background-color: #FFFFFF;
-    color: #66615B;
+    color: #fff;
 }
 
 .btn-neutral.btn-fill {
-    color: #66615B;
+    color: #fff;
 }
 
 .btn-neutral.btn-fill:hover,
@@ -1812,7 +1811,7 @@ fieldset[disabled] .btn-neutral.active {
     background-color: #fffcf5;
     border: medium none;
     border-radius: 4px;
-    color: #66615b;
+    color: #fff;
     font-size: 14px;
     transition: background-color 0.3s ease 0s;
     padding: 7px 18px;
@@ -2181,7 +2180,7 @@ textarea.form-control {
     margin-left: -20px;
     border-radius: 3px;
     opacity: .50;
-    background-color: #66615b;
+    background-color: #fff;
     transition: opacity 0.2s linear;
 }
 
@@ -2297,7 +2296,7 @@ textarea.form-control {
     position: absolute;
     left: 0;
     top: -5px;
-    color: #66615b;
+    color: #fff;
     opacity: .50;
     margin-left: -20px;
 }
@@ -2305,7 +2304,7 @@ textarea.form-control {
 .radio input[type="radio"]:not(:disabled):hover+label::before {
     font-family: 'FontAwesome';
     content: "\f192";
-    color: #66615b;
+    color: #fff;
     opacity: .50;
 }
 
@@ -2322,7 +2321,7 @@ textarea.form-control {
     margin-left: -20px;
     font-size: 22px;
     background-color: transparent;
-    color: #66615b;
+    color: #fff;
     transition: opacity 0.2s linear;
 }
 
@@ -2617,7 +2616,7 @@ footer.footer{
 }
 
 .footer nav ul a:not(.btn) {
-    color: #66615b;
+    color: #fff;
     display: block;
     margin-bottom: 3px;
 }
@@ -2628,7 +2627,7 @@ footer.footer{
 }
 
 .footer .copyright {
-    color: #66615b;
+    color: #fff;
     padding: 10px 15px;
     font-size: 14px;
     white-space: nowrap;
@@ -2897,7 +2896,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .dropdown-menu>li>a {
-    color: #66615b;
+    color: #fff;
     font-size: 14px;
     padding: 10px 15px;
     -webkit-transition: none;
@@ -2936,7 +2935,7 @@ Copyright (c) 2015 Daniel Eden
 
 .dropdown-menu>li>a:hover,
 .dropdown-menu>li>a:focus {
-    background-color: #66615B;
+    background-color: #fff;
     color: rgba(255, 255, 255, 0.7);
     opacity: 1;
     text-decoration: none;
@@ -3032,7 +3031,7 @@ Copyright (c) 2015 Daniel Eden
 
 .card .description {
     font-size: 16px;
-    color: #66615b;
+    color: #fff;
 }
 
 .card h6 {
@@ -4263,7 +4262,7 @@ Copyright (c) 2015 Daniel Eden
     }
     .sidebar .nav>li>a {
         margin: 0px 0px;
-        color: #66615B;
+        color: #fff;
         text-transform: uppercase;
         font-weight: 600;
         font-size: 12px;
@@ -4860,7 +4859,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .fixed-plugin .badge-brown {
-    background-color: #66615B;
+    background-color: #fff;
 }
 
 .fixed-plugin h5 {
